--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   geolocator: ^13.0.2
   shared_preferences: ^2.5.2
   stacked: ^3.4.4
+  lucide_icons: ^0.257.0
 
 dev_dependencies:
   flutter_test:
