--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   stacked: ^3.4.4
   lucide_icons: ^0.257.0
   secure_application: ^4.1.0
+  webview_flutter: ^4.13.0
   # flutter_windowmanager: ^0.2.0
   # firebase_core: ^3.12.1
   # firebase_auth: ^5.5.1
